[gd_scene load_steps=3 format=3 uid="uid://bxsps2i3hobv0"]

[ext_resource type="Script" path="res://scenes/ui/constructor_ui.gd" id="1_26v4u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_constructor"]
bg_color = Color(0.1, 0.11, 0.14, 0.97)
corner_radius = 8
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.2, 0.35, 0.5, 0.6)

[node name="ConstructorUI" type="CanvasLayer"]
script = ExtResource("1_26v4u")

[node name="VentanaFlotante" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 340.0
offset_bottom = 320.0
theme_override_styles/panel = SubResource("StyleBoxFlat_constructor")

[node name="VBoxContainer" type="VBoxContainer" parent="VentanaFlotante"]
layout_mode = 2

[node name="CenterTitulo" type="CenterContainer" parent="VentanaFlotante/VBoxContainer"]
layout_mode = 2

[node name="LabelTitulo" type="Label" parent="VentanaFlotante/VBoxContainer/CenterTitulo"]
layout_mode = 2
text = "CONSTRUCTOR"
horizontal_alignment = 1

[node name="OptionButton" type="OptionButton" parent="VentanaFlotante/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="VentanaFlotante/VBoxContainer"]
layout_mode = 2

[node name="LabelEstado" type="Label" parent="VentanaFlotante/VBoxContainer"]
layout_mode = 2

[node name="BarraProgreso" type="ProgressBar" parent="VentanaFlotante/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="LabelRequisitos" type="Label" parent="VentanaFlotante/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="VentanaFlotante/VBoxContainer"]
layout_mode = 2

[node name="LabelAlmacen" type="Label" parent="VentanaFlotante/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="BarraAlmacen" type="ProgressBar" parent="VentanaFlotante/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VentanaFlotante/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="ListaRecursos" type="VBoxContainer" parent="VentanaFlotante/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="BotonReclamar" type="Button" parent="VentanaFlotante/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "RECLAMAR (0)"
